
EXTRA_DIST = \
	dock.xpm	\
	dotfile.xpm	\
	down.xpm	\
	exit.xpm	\
	ff.xpm		\
	first.xpm	\
	fs.xpm		\
	fullscreen.xpm	\
	home.xpm \
	info.xpm	\
	last.xpm	\
	left.xpm	\
	nav_button.xpm	\
	next.xpm	\
	no_zoom.xpm	\
	options.xpm	\
	pause.xpm	\
	play.xpm	\
	pornview.xpm	\
	prev.xpm	\
	refresh.xpm	\
	right.xpm	\
	slideshow.xpm	\
	stop.xpm	\
	up.xpm		\
	view_list.xpm	\
	view_thumbs.xpm	\
	zoom_fit.xpm	\
	zoom_in.xpm	\
	zoom_out.xpm
